[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/fonts/RobotoFlex-VariableFont_GRAD,XTRA,YOPQ,YTAS,YTDE,YTFI,YTLC,YTUC,opsz,slnt,wdth,wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/placeholders/square-128.png" type="Texture" id=2]
[ext_resource path="res://assets/placeholders/square-rounded-512.png" type="Texture" id=3]
[ext_resource path="res://scenes/levels/hand.gd" type="Script" id=4]
[ext_resource path="res://scenes/levels/oldlevel.gd" type="Script" id=5]
[ext_resource path="res://assets/placeholders/triangle-512.png" type="Texture" id=6]
[ext_resource path="res://assets/placeholders/squareoutline.png" type="Texture" id=7]
[ext_resource path="res://assets/placeholders/trianglegrey.png" type="Texture" id=8]
[ext_resource path="res://scenes/widgets/go button.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/clickmasks/triangleclickmask.bmp" type="BitMap" id=10]
[ext_resource path="res://scenes/levels/decks.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 128
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.101961, 0.823529, 0.839216, 1 )

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.101961, 0.823529, 0.839216, 1 )

[node name="level" type="Node2D"]
script = ExtResource( 5 )

[node name="background" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 768, -41 )
scale = Vector2( 30, 30 )
z_index = -5
texture = ExtResource( 2 )

[node name="combatbar" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 950, 1200 )
scale = Vector2( 18, 7.89063 )
z_index = -3
texture = ExtResource( 2 )

[node name="cardslots" type="Node2D" parent="."]
position = Vector2( -400, 10 )
scale = Vector2( 1.3, 1.3 )

[node name="cardslot" type="Sprite" parent="cardslots"]
position = Vector2( 500, 700 )
scale = Vector2( 0.4, 0.6 )
texture = ExtResource( 7 )

[node name="cardslot2" type="Sprite" parent="cardslots"]
position = Vector2( 700, 700 )
scale = Vector2( 0.4, 0.6 )
texture = ExtResource( 7 )

[node name="cardslot3" type="Sprite" parent="cardslots"]
position = Vector2( 900, 700 )
scale = Vector2( 0.4, 0.6 )
texture = ExtResource( 7 )

[node name="cardslot4" type="Sprite" parent="cardslots"]
position = Vector2( 1100, 700 )
scale = Vector2( 0.4, 0.6 )
texture = ExtResource( 7 )

[node name="go button" parent="." instance=ExtResource( 9 )]
margin_top = -100.0
margin_bottom = -100.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 960, 640 )
current = true

[node name="lookDownTween" type="Tween" parent="Camera2D"]

[node name="lookUpTween" type="Tween" parent="Camera2D"]

[node name="lookdown" type="TextureButton" parent="."]
visible = false
anchor_right = 0.021
anchor_bottom = 0.037
margin_left = 1900.0
margin_top = 1100.0
margin_right = 2412.0
margin_bottom = 1612.0
rect_rotation = 180.0
rect_scale = Vector2( 0.5, 0.3 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
texture_click_mask = ExtResource( 10 )

[node name="lookup" type="TextureButton" parent="."]
visible = false
margin_left = 1650.0
margin_top = 1260.0
margin_right = 2162.0
margin_bottom = 1772.0
rect_scale = Vector2( 0.5, 0.3 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
texture_click_mask = ExtResource( 10 )

[node name="decks" type="Node2D" parent="."]
position = Vector2( 400, 230 )
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 11 )

[node name="drawPile" type="Node2D" parent="decks"]
position = Vector2( 1350, 870 )
scale = Vector2( 0.35, 0.5 )
z_index = 20

[node name="Sprite" type="Sprite" parent="decks/drawPile"]
texture = ExtResource( 3 )

[node name="desc" type="Label" parent="decks/drawPile"]
margin_left = -150.0
margin_top = 100.0
margin_right = 144.0
margin_bottom = 251.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Draw"

[node name="count" type="Label" parent="decks/drawPile"]
margin_left = -140.0
margin_top = -100.0
margin_right = 156.0
margin_bottom = 205.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
autowrap = true

[node name="discardPile" type="Node2D" parent="decks"]
position = Vector2( 1550, 870 )
scale = Vector2( 0.35, 0.5 )
z_index = 20

[node name="Sprite" type="Sprite" parent="decks/discardPile"]
texture = ExtResource( 3 )

[node name="desc" type="Label" parent="decks/discardPile"]
margin_left = -210.0
margin_top = 100.0
margin_right = 223.0
margin_bottom = 251.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Discard"

[node name="count" type="Label" parent="decks/discardPile"]
margin_left = -140.0
margin_top = -100.0
margin_right = 156.0
margin_bottom = 205.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
autowrap = true

[node name="gravePile" type="Node2D" parent="decks"]
position = Vector2( 1750, 870 )
scale = Vector2( 0.35, 0.5 )
z_index = 20

[node name="Sprite" type="Sprite" parent="decks/gravePile"]
texture = ExtResource( 3 )

[node name="desc" type="Label" parent="decks/gravePile"]
margin_left = -150.0
margin_top = 100.0
margin_right = 144.0
margin_bottom = 251.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Grave"

[node name="count" type="Label" parent="decks/gravePile"]
margin_left = -140.0
margin_top = -100.0
margin_right = 156.0
margin_bottom = 205.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
autowrap = true

[node name="hand" type="Node2D" parent="decks"]
position = Vector2( 830, 1447.14 )
script = ExtResource( 4 )

[node name="debugbutton" type="Button" parent="."]
visible = false
margin_left = 98.0
margin_top = 1187.0
margin_right = 370.0
margin_bottom = 1303.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[connection signal="pressed" from="go button/goclick" to="." method="_on_goclick_pressed"]
[connection signal="pressed" from="lookdown" to="." method="_on_lookdown_pressed"]
[connection signal="pressed" from="lookup" to="." method="_on_lookup_pressed"]
[connection signal="pressed" from="debugbutton" to="." method="_on_debugbutton_pressed"]

[editable path="go button"]
